<resources>
    <string name="app_name">Shop Til You Drop</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="back">back</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="log_out">log out</string>
    <string name="add">add</string>
    <string name="type_food">Type of Food</string>
    <string name="price_of_food">Price</string>
    <string name="store">Store</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_item">Add Item</string>
    <string name="checkout">Check Out</string>
    <string name="add_to_checkout">Add to Checkout</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="items">Items</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_checkout">Remove from Checkout</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="quantity">Quantity</string>

</resources>
