<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/list_item_name"
        android:layout_width="107dp"
        android:layout_height="28dp"
        android:text="@string/type_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_alignParentStart="true"
        tools:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/list_item_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store"
        app:layout_constraintStart_toStartOf="@+id/list_item_name"
        app:layout_constraintTop_toBottomOf="@+id/list_item_name" />

    <TextView
        android:id="@+id/list_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_of_food"
        app:layout_constraintStart_toStartOf="@+id/list_item_store"
        app:layout_constraintTop_toBottomOf="@+id/list_item_store" />

    <TextView
        android:id="@+id/list_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="@+id/list_item_price"
        app:layout_constraintTop_toBottomOf="@+id/list_item_price" />

    <Button
        android:id="@+id/list_item_increase_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/increase_quantity"
        app:layout_constraintStart_toEndOf="@+id/list_item_name"
        app:layout_constraintTop_toTopOf="@+id/list_item_name" />

    <Button
        android:id="@+id/list_item_remove_from_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_checkout"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/list_item_increase_quantity"
        app:layout_constraintTop_toBottomOf="@+id/list_item_increase_quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>