<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:gravity="center">

    <Button
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:text="@string/add_item"
        app:layout_constraintBottom_toTopOf="@+id/checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="400dp"
        android:text="@string/checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_item" />

    <Button
        android:id="@+id/favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkout"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="300dp"
        android:text="@string/favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkout" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favorites"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="200dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorites" />

</androidx.constraintlayout.widget.ConstraintLayout>