<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="340dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/food"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="261dp"
        android:layout_marginBottom="487dp"
        android:autofillHints=""
        android:hint="@string/type_food"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="99dp"
        android:autofillHints=""
        android:hint="@string/price_of_food"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/food"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="340dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>